Fix text alignment in Skills component content, WIP global update to font

--- a/src/app/skills/aws-certifications/aws-certs.module.scss
+++ b/src/app/skills/aws-certifications/aws-certs.module.scss
@@ -57,11 +57,11 @@
 .awsText {
 	flex: 1;
 	font-size: 15px;
-	line-height: 1.8;
+	line-height: 2;
 	max-width: 100%;
 	height: auto;
 	color: var(--header-white);
-	text-align: center;
+	text-align: left;
 	display: flex;
 	justify-content: center;
 	align-items: center;
