--- a/src/components/about-me/about-me.module.scss
+++ b/src/components/about-me/about-me.module.scss
@@ -133,7 +133,7 @@
 }
 
 .aboutMeText {
-	font-size: 12px;
+	font-size: 22px;
 	line-height: 1.8;
 	max-width: 800px;
 	margin: 0 auto;
